--- a/app/src/main/res/layout/fragment_playground.xml
+++ b/app/src/main/res/layout/fragment_playground.xml
@@ -22,6 +22,12 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/playground_compose" />
+
+            <com.google.android.material.button.MaterialButton
+                android:id="@+id/button_playground_to_compose_list"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/playground_compose_list" />
         </LinearLayout>
     </ScrollView>
 </layout>
