--- a/app/src/main/res/layout/fragment_biometric.xml
+++ b/app/src/main/res/layout/fragment_biometric.xml
@@ -11,7 +11,7 @@
       android:id="@+id/button_hand"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
-      android:text="指紋認証"
+      android:text="@string/biometric_fingerprint_authentication"
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintStart_toStartOf="parent"
