--- a/app/src/main/res/layout/fragment_motion.xml
+++ b/app/src/main/res/layout/fragment_motion.xml
@@ -2,29 +2,36 @@
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
   xmlns:app="http://schemas.android.com/apk/res-auto">
 
-  <androidx.constraintlayout.widget.ConstraintLayout
+  <ScrollView
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <com.google.android.material.button.MaterialButton
-      android:id="@+id/to_top_swipe"
-      android:layout_width="wrap_content"
+    <LinearLayout
+      android:layout_width="match_parent"
       android:layout_height="wrap_content"
-      android:text="@string/motion_top_swipe"
-      app:layout_constraintBottom_toBottomOf="parent"
-      app:layout_constraintEnd_toEndOf="parent"
-      app:layout_constraintStart_toStartOf="parent"
-      app:layout_constraintTop_toTopOf="parent" />
+      android:padding="8dp"
+      android:orientation="vertical">
 
-    <com.google.android.material.button.MaterialButton
-      android:id="@+id/to_side_swipe"
-      android:layout_width="wrap_content"
-      android:layout_height="wrap_content"
-      android:text="@string/motion_side_swipe"
-      app:layout_constraintEnd_toEndOf="parent"
-      app:layout_constraintStart_toStartOf="parent"
-      app:layout_constraintTop_toBottomOf="@+id/to_top_swipe" />
+      <com.google.android.material.button.MaterialButton
+        android:id="@+id/to_top_swipe"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/motion_top_swipe" />
 
-  </androidx.constraintlayout.widget.ConstraintLayout>
+      <com.google.android.material.button.MaterialButton
+        android:id="@+id/to_side_swipe"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/motion_side_swipe" />
+
+      <com.google.android.material.button.MaterialButton
+        android:id="@+id/to_custom_swipe"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/motion_custom_view" />
+    </LinearLayout>
+
+  </ScrollView>
+
 </layout>
 
