--- a/app/src/main/res/xml/scene_02.xml
+++ b/app/src/main/res/xml/scene_02.xml
@@ -47,26 +47,32 @@
   </ConstraintSet>
 
   <ConstraintSet android:id="@+id/start_color">
-    <Constraint android:id="@id/view_color">
-      <Layout
-        android:layout_width="64dp"
-        android:layout_height="64dp"
-        android:layout_marginStart="8dp"
-        motion:layout_constraintBottom_toBottomOf="parent"
-        motion:layout_constraintStart_toStartOf="parent"
-        motion:layout_constraintTop_toTopOf="parent" />
+    <Constraint
+      android:id="@id/view_color"
+      android:layout_width="64dp"
+      android:layout_height="64dp"
+      android:layout_marginStart="8dp"
+      motion:layout_constraintBottom_toBottomOf="parent"
+      motion:layout_constraintStart_toStartOf="parent"
+      motion:layout_constraintTop_toTopOf="parent">
+      <CustomAttribute
+        motion:attributeName="BackgroundColor"
+        motion:customColorValue="#D81B60" />
     </Constraint>
   </ConstraintSet>
 
   <ConstraintSet
     android:id="@+id/end_color"
     motion:deriveConstraintsFrom="@id/start_color">
-    <Constraint android:id="@id/view_color">
-      <Layout
-        android:layout_width="64dp"
-        android:layout_height="64dp"
-        android:layout_marginEnd="8dp"
-        motion:layout_constraintEnd_toEndOf="parent" />
+    <Constraint
+      android:id="@id/view_color"
+      android:layout_width="64dp"
+      android:layout_height="64dp"
+      android:layout_marginEnd="8dp"
+      motion:layout_constraintEnd_toEndOf="parent">
+      <CustomAttribute
+        motion:attributeName="BackgroundColor"
+        motion:customColorValue="#9999FF" />
     </Constraint>
   </ConstraintSet>
 
