connect to groupie view

--- a/app/src/main/res/layout/fragment_playground.xml
+++ b/app/src/main/res/layout/fragment_playground.xml
@@ -23,6 +23,12 @@
         android:layout_height="wrap_content"
         android:text="@string/playground_motion_layout" />
 
+      <com.google.android.material.button.MaterialButton
+        android:id="@+id/to_groupie_view"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/playground_groupie_view" />
+
     </LinearLayout>
   </ScrollView>
 </layout>
