--- a/app/src/main/res/layout/fragment_motion_top_swipe.xml
+++ b/app/src/main/res/layout/fragment_motion_top_swipe.xml
@@ -7,7 +7,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     app:layoutDescription="@xml/scene_01"
-    tools:context=".MainActivity">
+    tools:context=".ui.MainActivity">
 
     <androidx.appcompat.widget.Toolbar
       android:id="@+id/toolbar"
