--- a/app/src/main/res/navigation/nav_main.xml
+++ b/app/src/main/res/navigation/nav_main.xml
@@ -66,7 +66,11 @@
   <fragment
     android:id="@+id/fragment_groupie"
     android:name="com.example.androidtechsample.ui.groupie.GroupieFragment"
-    tools:layout="@layout/fragment_groupie"/>
+    tools:layout="@layout/fragment_groupie">
+    <action
+      android:id="@+id/to_fragment_groupie_basic"
+      app:destination="@id/fragment_groupie_basic" />
+  </fragment>
 
   <fragment
     android:id="@+id/fragment_groupie_basic"
