--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,10 +1,45 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-  <color name="purple_200">#FFBB86FC</color>
   <color name="purple_500">#FF6200EE</color>
   <color name="purple_700">#FF3700B3</color>
-  <color name="teal_200">#FF03DAC5</color>
   <color name="teal_700">#FF018786</color>
   <color name="black">#FF000000</color>
   <color name="white">#FFFFFFFF</color>
+
+  <color name="red_200">#ef9a9a</color>
+  <color name="pink_200">#F48FB1</color>
+  <color name="purple_200">#CE93D8</color>
+  <color name="deep_purple_200">#B39DDB</color>
+  <color name="indigo_200">#9FA8DA</color>
+  <color name="blue_200">#90CAF9</color>
+  <color name="light_blue_200">#81D4FA</color>
+  <color name="cyan_200">#80DEEA</color>
+  <color name="teal_200">#80CBC4</color>
+  <color name="green_200">#A5D6A7</color>
+  <color name="light_green_200">#C5E1A5</color>
+  <color name="lime_200">#E6EE9C</color>
+  <color name="yellow_200">#FFF59D</color>
+  <color name="amber_200">#FFE082</color>
+  <color name="orange_200">#FFCC80</color>
+  <color name="deep_orange_200">#FFAB91</color>
+
+  <array name="rainbow_200">
+    <item>@color/black</item>
+    <item>@color/pink_200</item>
+    <item>@color/purple_200</item>
+    <item>@color/deep_purple_200</item>
+    <item>@color/indigo_200</item>
+    <item>@color/blue_200</item>
+    <item>@color/light_blue_200</item>
+    <item>@color/cyan_200</item>
+    <item>@color/teal_200</item>
+    <item>@color/green_200</item>
+    <item>@color/light_green_200</item>
+    <item>@color/lime_200</item>
+    <item>@color/yellow_200</item>
+    <item>@color/amber_200</item>
+    <item>@color/orange_200</item>
+    <item>@color/deep_orange_200</item>
+  </array>
+
 </resources>
