--- a/app/src/main/res/layout/model_groupie_carousel_item.xml
+++ b/app/src/main/res/layout/model_groupie_carousel_item.xml
@@ -5,11 +5,13 @@
   <androidx.constraintlayout.widget.ConstraintLayout
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:padding="16dp">
+    android:layout_margin="8dp"
+    android:padding="24dp">
 
     <ImageView
-      android:layout_width="wrap_content"
-      android:layout_height="wrap_content"
+      android:id="@+id/close_button"
+      android:layout_width="24dp"
+      android:layout_height="24dp"
       android:layout_gravity="center"
       android:duplicateParentState="true"
       android:importantForAccessibility="no"
