--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,4 +1,4 @@
-<resources xmlns:tools="http://schemas.android.com/tools">
+<resources>
 
   <style name="Text" />
 
@@ -53,11 +53,6 @@
     <item name="lineHeight">@dimen/line_height_body3</item>
   </style>
 
-  <style name="Text.PrimaryColor.Caption">
-    <item name="android:textSize">@dimen/font_size_caption</item>
-    <item name="lineHeight">@dimen/line_height_caption</item>
-  </style>
-
   <style name="Text.PrimaryColor.Body1.Bold">
     <item name="android:textStyle">bold</item>
   </style>
@@ -67,10 +62,6 @@
   </style>
 
   <style name="Text.PrimaryColor.Body3.Bold">
-    <item name="android:textStyle">bold</item>
-  </style>
-
-  <style name="Text.PrimaryColor.Caption.Bold">
     <item name="android:textStyle">bold</item>
   </style>
 
