--- a/app/src/main/res/navigation/nav_main.xml
+++ b/app/src/main/res/navigation/nav_main.xml
@@ -73,6 +73,9 @@
     <action
       android:id="@+id/to_fragment_groupie_carousel"
       app:destination="@id/fragment_groupie_carousel" />
+    <action
+      android:id="@+id/to_fragment_groupie_swipe"
+      app:destination="@id/fragment_groupie_swipe" />
   </fragment>
 
   <fragment
@@ -84,5 +87,10 @@
     android:id="@+id/fragment_groupie_carousel"
     android:name="com.example.androidtechsample.ui.groupie.carousel.GroupieCarouselFragment"
     tools:layout="@layout/fragment_groupie_carousel"/>
+
+  <fragment
+    android:id="@+id/fragment_groupie_swipe"
+    android:name="com.example.androidtechsample.ui.groupie.swipe.GroupieSwipeFragment"
+    tools:layout="@layout/fragment_groupie_swipe"/>
 
 </navigation>
