--- a/app/src/main/res/layout/model_groupie_swipe_item.xml
+++ b/app/src/main/res/layout/model_groupie_swipe_item.xml
@@ -15,7 +15,7 @@
     android:paddingVertical="8dp">
 
     <com.google.android.material.button.MaterialButton
-      android:id="@+id/to_groupie_view"
+      android:id="@+id/item"
       android:layout_width="0dp"
       android:layout_height="80dp"
       android:text="@{itemLabel}"
