--- a/app/src/main/res/layout/model_groupie_swipe_item.xml
+++ b/app/src/main/res/layout/model_groupie_swipe_item.xml
@@ -3,8 +3,9 @@
   xmlns:app="http://schemas.android.com/apk/res-auto">
 
   <data>
+
     <variable
-      name="itemLabel"
+      name="indexId"
       type="String" />
   </data>
 
@@ -18,7 +19,8 @@
       android:id="@+id/item"
       android:layout_width="0dp"
       android:layout_height="80dp"
-      android:text="@{itemLabel}"
+      android:text="@{indexId}"
+      android:textColor="@color/white"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toTopOf="parent" />
