--- a/app/src/main/res/layout/fragment_playground.xml
+++ b/app/src/main/res/layout/fragment_playground.xml
@@ -29,6 +29,12 @@
         android:layout_height="wrap_content"
         android:text="@string/playground_groupie_view" />
 
+      <com.google.android.material.button.MaterialButton
+        android:id="@+id/to_span_view"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/playground_span_view" />
+
     </LinearLayout>
   </ScrollView>
 </layout>
