--- a/app/src/main/res/layout/fragment_span.xml
+++ b/app/src/main/res/layout/fragment_span.xml
@@ -48,6 +48,13 @@
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toBottomOf="@id/text_background" />
 
+    <TextView
+      android:id="@+id/text_click"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      app:layout_constraintStart_toStartOf="parent"
+      app:layout_constraintTop_toBottomOf="@id/text_paragraph" />
+
   </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
 
