--- a/app/src/main/res/layout/fragment_span.xml
+++ b/app/src/main/res/layout/fragment_span.xml
@@ -62,6 +62,14 @@
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toBottomOf="@id/text_paragraph" />
 
+    <TextView
+      android:id="@+id/text_ktx"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:textSize="@dimen/font_size_head_2"
+      app:layout_constraintStart_toStartOf="parent"
+      app:layout_constraintTop_toBottomOf="@id/text_click" />
+
   </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
 
