--- a/app/src/main/res/layout/fragment_playground.xml
+++ b/app/src/main/res/layout/fragment_playground.xml
@@ -35,6 +35,12 @@
         android:layout_height="wrap_content"
         android:text="@string/playground_span_view" />
 
+      <com.google.android.material.button.MaterialButton
+        android:id="@+id/to_notification_view"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/playground_notification_view" />
+
     </LinearLayout>
   </ScrollView>
 </layout>
