--- a/app/src/main/res/layout/fragment_notification.xml
+++ b/app/src/main/res/layout/fragment_notification.xml
@@ -34,6 +34,15 @@
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toBottomOf="@+id/action_notice" />
 
+    <com.google.android.material.button.MaterialButton
+      android:id="@+id/button_notice_progress"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:text="@string/notice_progress"
+      app:layout_constraintEnd_toEndOf="parent"
+      app:layout_constraintStart_toStartOf="parent"
+      app:layout_constraintTop_toBottomOf="@+id/direct_notice" />
+
   </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
 
