--- a/app/src/main/res/navigation/nav_main.xml
+++ b/app/src/main/res/navigation/nav_main.xml
@@ -106,7 +106,7 @@
 
   <fragment
     android:id="@+id/fragment_notification"
-    android:name="com.example.androidtechsample.ui.NotificationFragment"
+    android:name="com.example.androidtechsample.ui.notification.NotificationFragment"
     tools:layout="@layout/fragment_notification" />
 
 </navigation>
