--- a/app/src/main/res/navigation/nav_main.xml
+++ b/app/src/main/res/navigation/nav_main.xml
@@ -114,6 +114,19 @@
 
   <fragment
     android:id="@+id/fragment_camera"
-    android:name="com.example.androidtechsample.ui.camera.CameraFragment" />
+    android:name="com.example.androidtechsample.ui.camera.CameraFragment"
+    tools:layout="@layout/fragment_camera">
+    <action
+      android:id="@+id/to_fragment_camera_preview"
+      app:destination="@id/fragment_camera_preview" />
+  </fragment>
 
+  <fragment
+    android:id="@+id/fragment_camera_preview"
+    android:name="com.example.androidtechsample.ui.camera.CameraPreviewFragment"
+    tools:layout="@layout/fragment_camera_preview">
+    <argument
+      android:name="photoUri"
+      app:argType="string" />
+  </fragment>
 </navigation>
