add viewCorner, permission

--- a/app/src/main/res/navigation/nav_main.xml
+++ b/app/src/main/res/navigation/nav_main.xml
@@ -119,6 +119,9 @@
     <action
       android:id="@+id/to_fragment_camera_preview"
       app:destination="@id/fragment_camera_preview" />
+    <action
+      android:id="@+id/to_fragment_camera_gallery"
+      app:destination="@id/fragment_camera_gallery" />
   </fragment>
 
   <fragment
@@ -128,5 +131,11 @@
     <argument
       android:name="photoUri"
       app:argType="string" />
+  </fragment>
+
+  <fragment
+    android:id="@+id/fragment_camera_gallery"
+    android:name="com.example.androidtechsample.ui.camera.GalleryFragment"
+    tools:layout="@layout/fragment_gallery">
   </fragment>
 </navigation>
