--- a/app/src/main/res/layout/model_user_icon.xml
+++ b/app/src/main/res/layout/model_user_icon.xml
@@ -1,6 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-  xmlns:app="http://schemas.android.com/apk/res-auto">
+  xmlns:app="http://schemas.android.com/apk/res-auto"
+  xmlns:bind="http://schemas.android.com/apk/res-auto">
+
+  <data>
+
+    <variable
+      name="image"
+      type="String" />
+  </data>
+
 
   <androidx.constraintlayout.widget.ConstraintLayout
     android:layout_width="wrap_content"
@@ -16,7 +25,8 @@
       android:contentDescription="@null"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintStart_toStartOf="parent"
-      app:layout_constraintTop_toTopOf="parent" />
+      app:layout_constraintTop_toTopOf="parent"
+      bind:image_circle="@{image}" />
 
     <TextView
       android:id="@+id/text_user_name"
@@ -24,6 +34,7 @@
       android:layout_height="wrap_content"
       android:layout_marginTop="16dp"
       android:ellipsize="end"
+      android:gravity="center"
       android:maxLines="1"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintStart_toStartOf="parent"
