--- a/app/src/main/res/layout/fragment_list.xml
+++ b/app/src/main/res/layout/fragment_list.xml
@@ -13,9 +13,20 @@
       android:layout_height="wrap_content"
       android:orientation="horizontal"
       app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-      app:layout_constraintEnd_toEndOf="parent"
+      app:layout_constraintEnd_toStartOf="@id/text_all"
       app:layout_constraintStart_toStartOf="parent"
-      app:layout_constraintTop_toTopOf="parent" />
+      app:layout_constraintTop_toTopOf="parent"
+      tools:listitem="@layout/model_user_icon" />
+
+    <TextView
+      android:id="@+id/text_all"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:layout_marginTop="32dp"
+      android:paddingHorizontal="16dp"
+      android:text="@string/list_all"
+      app:layout_constraintEnd_toEndOf="parent"
+      app:layout_constraintTop_toTopOf="@id/recycler_view" />
 
     <TextView
       android:id="@+id/text_label"
