--- a/app/src/main/res/layout/fragment_list.xml
+++ b/app/src/main/res/layout/fragment_list.xml
@@ -32,11 +32,11 @@
       android:id="@+id/text_label"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
+      android:text="@string/list_all"
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintStart_toStartOf="parent"
-      app:layout_constraintTop_toBottomOf="@id/recycler_view"
-      tools:text="view1" />
+      app:layout_constraintTop_toBottomOf="@id/recycler_view" />
 
   </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
